--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,7 @@
         "xhash": "cpp",
         "xtree": "cpp",
         "iomanip": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "set": "cpp"
     }
 }
